# magnesium

./: LICENSE  README.md  magnesium.h
demo_rp2350_arm_cmsis/: Makefile  core1.c  main.c  script.ld  startup_rp2350.s
demo_rp2350_arm_sdk/: CMakeLists.txt  main.c
demo_rp2350_riscv/: Makefile  mg_port.h  mtimer.h  rp2350.ld
demo_rp2350_riscv/hardware/structs/: accessctrl.h  adc.h  bootram.h  clocks.h  coresight_trace.h  dma.h  i2c.h  interp.h  io_qspi.h  m33_eppb.h  nvic.h  otp.h  pads_bank0.h  pll.h  powman.h  sau.h  spi.h  systick.h  tbman.h  ticks.h  tmds_encode.h  uart.h  xip.h  xip_aux.h
demo_stm32/: Makefile  main.c
demo_stm32f0/: Makefile  main.c
demo_stm32f1/: Makefile  main.c
demo_stm32f401/: LinkerScript.ld  Makefile  main.c  startup_stm32f401xc.s
examples/rp2350_arm_cmsis/: Makefile
examples/rp2350_arm_sdk/: CMakeLists.txt
examples/rp2350_riscv/: Makefile  core1.c  main.c  startup.s
examples/rp2350_riscv/hardware/: address_mapped.h
examples/rp2350_riscv/hardware/structs/: busctrl.h  dma_debug.h  glitch_detector.h  hstx_ctrl.h  hstx_fifo.h  io_bank0.h  m33.h  mpu.h  pads_qspi.h  pio.h  psm.h  pwm.h  qmi.h  resets.h  rosc.h  scb.h  sha256.h  sio.h  syscfg.h  (+7 more)
examples/stm32f0/: LinkerScript.ld  Makefile  startup.s  stm32f0xx.h
examples/stm32f1/: Makefile  main.c
examples/stm32f401/: Makefile  stm32f4xx.h
nvic/: mg_port.h
nvic_m0/: mg_port.h
nvic_nopreempt/: mg_port.h
nvic_preempt/: mg_port.h
test/: mg_port.h
tests/: delay.c  mg_port.h  mocks.h  overflow.c  preemption.c  protothreads.c  queue_push.c  run.sh  try_pop.c  yield.c
